@@ -1,3 +1,9 @@
+2007-10-19 20:16 pcg
+
+	* pm/Config.pm:
+	* pm/Font.pm: fix obvious (hopefully) Gnom2 => Gnome2 typo. This
+	features prominently on CPAN :-)
+
 2007-09-19  Emmanuele Bassi  <ebassi@gnome.org>
 
 	* README:
